# manic-miner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  pitfall.cpp  pitfall.h
win/: pitfall.sln  pitfall.vcxproj
